# TerraRisk-Agent

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/terrarisk-agent/: README.md
apps/terrarisk-agent/backend/: .env.example  Dockerfile  pyproject.toml
apps/terrarisk-agent/backend/terrarisk/: config.py  main.py
apps/terrarisk-agent/backend/terrarisk/agents/: planner.py
apps/terrarisk-agent/backend/terrarisk/connectors/: bigquery_ee.py  boundaries.py  datacommons.py  earth_ai.py  nri.py
apps/terrarisk-agent/backend/terrarisk/examples/: README.md  offline_nri.csv
apps/terrarisk-agent/backend/terrarisk/models/: domain.py
apps/terrarisk-agent/backend/terrarisk/reports/: compose.py
apps/terrarisk-agent/backend/terrarisk/services/: analysis.py
apps/terrarisk-agent/backend/terrarisk/utils/: provenance.py
apps/terrarisk-agent/backend/terrarisk_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/terrarisk-agent/backend/tests/: test_analysis.py  test_api.py  test_bigquery_helpers.py  test_connectors.py  test_planner.py  test_reports.py  test_scenarios.py
apps/terrarisk-agent/evals/: README.md  golden_qa.jsonl  run_eval.py
apps/terrarisk-agent/frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/terrarisk-agent/frontend/app/: globals.css  layout.tsx  page.tsx
apps/terrarisk-agent/frontend/components/: MapPreview.tsx
docs/: API_REFERENCE.md  APPENDICES.md  ARCHITECTURE.md  FAQ.md  QUICKSTART.md
(+3 files in other folders)
